@@ -1,3 +1,4 @@
 [#180] Fix in the test_metta_api.py integration test
 [#136] Implement methods in the DAS API to create indexes in the database
 [#BUGFIX] Fix Mock in unit tests
+[#90] OpenFaas is not serializing/deserializing query answers
